--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Avotra Andriatsilavina</h2>
         <p>Je suis <span class="typed" data-typed-items="Developpeur Web"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
-        <button id="downloadCv" download="AvotraCV.pdf" class="hero-btn">Télécharger votre CV</button>
+        <a href="AvotraCV" download="AvotraCV.pdf" style="text-decoration: none;"></a><button type="button" class="hero-btn">Télécharger votre CV</button></a>
       </div>
     </section>
     <!-- /Hero Section -->
