--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               </div>
             </div>
             <p class="py-3">
-              Je suis passionné par la programmation. Après trois ans d'études à l'Université IT, 
+              Je suis passionné par la programmation. Après trois ans d'études à l'IT Université, 
               je suis prêt à mettre mes compétences à votre service en tant que développeur fullstack. 
               Je suis motivé à contribuer à des projets innovants et à apporter des solutions techniques efficaces.
             </p>
